compiler/tools/fpp-check/test/container/missing_product_send_port.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/container/missing_product_send_port.fpp:5.1
passive component C {
^
error: component with data product specifiers must have product send port
